hphp/hack/test/typecheck/anon_fun/anon1.php.exp
File "anon1.php", line 9, characters 5-6:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
